--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1,19 +1,16 @@
-@article{netwok2020,
-  title={At-scale impact of the {Net Wok}: A culinarically holistic investigation of distributed dumplings},
-  author={Astley, Rick and Morris, Linda},
-  journal={Armenian Journal of Proceedings},
-  volume={61},
-  pages={192--219},
-  year=2020,
-  publisher={Automatic Publishing Inc.}
+@article{residentialPV2025,
+  title={Residential solar photovoltaic adoption: An in-depth review on potential, main barriers and related incentives},
+  author={Nabipour, Shahab and Vahidinasab, Vahid and Alizadeh, Mahdi},
+  journal={Energy and Buildings},
+  volume={319},
+  year=2025,
+  publisher={Elsevier}
 }
 
-@article{netwok2022,
-  title={{Net Wok}++: Taking distributed dumplings to the cloud},
-  author={Morris, Linda and Astley, Rick},
-  journal={Armenian Journal of Proceedings},
-  volume={65},
-  pages={101--118},
-  year=2022,
-  publisher={Automatic Publishing Inc.}
+@misc{statista_residential_pv_europe_2025,
+  title        = {Residential solar photovoltaics in Europe – statistics & facts},
+  howpublished = {\url{https://www.statista.com/topics/13626/residential-solar-photovoltaics-in-europe/}},
+  note         = {Accessed: 2025-11-28},
+  year         = {2025},
+  author       = {Statista Editorial Team}
 }
